# librmreferee

./: CMakeLists.txt
inc/librmreferee/: crc.h  enums.h  log.h  packets.h  platform.h  rmreferee.h  structs.h
src/: constants.cpp  log.cpp  main.cpp  packetfactory.cpp  packets.cpp  refereerecvcontrol.cpp
test/: main.cpp
